# trackotron

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/actions/setup-env/: action.yaml
.github/workflows/: build.yaml  main.yaml  publish.yaml  quality.yaml  test.yaml
scripts/: baseline.py  benchmark.py
src/trackotron/: __init__.py  _version.py  observer.py  proxies.py  types_.py  updates.py
src/trackotron/contexts/: context.py  event.py  generation.py  span.py
src/trackotron/types_/: __init__.py  aliases.py  generics.py  misc.py
tests/unit/: conftest.py
tests/unit/contexts/: observation_context_test.py
tests/unit/proxies/: test_observation_proxy.py
tests/unit/updates/: generation_update_test.py  test_event_update.py  test_observation_update.py  test_span_update.py
